--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "eth-swap",
+  "name": "zebraswap",
   "version": "0.1.0",
   "description": "An Instant ERC-20 Cryptocurrency Exchange",
-  "author": "gregory@dappuniversity.com",
+  "author": "greg",
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
